tests/transpiler/x/scala/closure.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:16:45 GMT+7
object Main extends App {
  def makeAdder(n) = {
    ((x: Any) => (x + n))
  }

  val add10 = makeAdder(10)
  println(add10(7))
}
